--- a/index.html
+++ b/index.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
         <link rel="stylesheet" href="./setup.css">
     </head>
     <body>
-        <section class="board">
+        <header class="container">
+            <section class="row"> <!--style="border: 1px dotted rgb(66, 133, 244);"-->
+                <div class="col-4"> <!--style="border: 1px dotted rgb(210, 210, 210);"-->
 
-        </section>
+                </div>
+                <div class="col-4 d-flex justify-content-center align-items-center">
+                        <img width="60" src="tictactoe.logo.svg" class="logo">
+                </div>
+                <div class="col-4">
+                    
+                </div>
+            </section>
+        </header>
+        <main class="container">
+            <section class="row">
+                <div class="col-12 d-flex align-items-center justify-content-center">
+                    <div class="board"></div>
+                </div>
+            </section>
+        </main>
+        <footer class="container-fluid">
+
+        </footer>
+        <div class="menu-overlay">
+            <nav>
+                <div class="menu-btn"></div>
+                <div class="menu-btn"></div>
+                <div class="menu-btn"></div>
+            </nav>
+        </div>
     </body>
 </html>
