--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
                 </div>
                 <div class="col-4 d-flex justify-content-center align-items-center">
                         <img width="60" src="tictactoe.logo.svg" class="logo">
+                        <h1 style="color: rgb(66, 133, 244); margin-left: 4px;">tictactoe</h1>
                 </div>
                 <div class="col-4">
                     
