--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
         <link rel="stylesheet" href="./setup.css">
+        <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     </head>
     <body>
         <header class="container">
@@ -12,7 +13,7 @@
                 </div>
                 <div class="col-4 d-flex justify-content-center align-items-center">
                         <img width="60" src="tictactoe.logo.svg" class="logo">
-                        <h1 style="color: rgb(66, 133, 244); margin-left: 4px;">tictactoe</h1>
+                        <h1 style="margin-left: 4px;">tictactoe</h1>
                 </div>
                 <div class="col-4">
                     
@@ -27,13 +28,23 @@
             </section>
         </main>
         <footer class="container-fluid">
-
+            <div class="row">
+                <!--div class="col-12 d-flex flex-column-reverse align-items-center justify-content-end">
+                    <h2><i class="fa fa-github" style="margin-right: 5px;">niquet</i></h2>
+                </div-->
+            </div>
         </footer>
         <div class="menu-overlay">
             <nav>
-                <div class="menu-btn"></div>
-                <div class="menu-btn"></div>
-                <div class="menu-btn"></div>
+                <div class="menu-btn d-flex align-items-center justify-content-center">
+                    <i class="fa fa-refresh" aria-hidden="true"></i>
+                </div>
+                <div class="menu-btn d-flex align-items-center justify-content-center">
+                    <i class="fa fa-undo" aria-hidden="true"></i>
+                </div>
+                <div class="menu-btn d-flex align-items-center justify-content-center">
+                    <i class="fa fa-times" aria-hidden="true"></i>
+                </div>
             </nav>
         </div>
     </body>
