--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 </div>
                 <div class="col-4 d-flex justify-content-center align-items-center">
                         <img width="60" src="tictactoe.logo.svg" class="logo">
-                        <h1 style="margin-left: 4px;">tictactoe</h1>
+                        <h1 style="margin-left: 4px;" class="noselect">tictactoe</h1>
                 </div>
                 <div class="col-4">
                     
@@ -36,13 +36,13 @@
         </footer>
         <div class="menu-overlay">
             <nav>
-                <div class="menu-btn d-flex align-items-center justify-content-center">
+                <div class="menu-btn d-flex align-items-center justify-content-center" id="game-reload">
                     <i class="fa fa-refresh" aria-hidden="true"></i>
                 </div>
-                <div class="menu-btn d-flex align-items-center justify-content-center">
+                <div class="menu-btn d-flex align-items-center justify-content-center" id="game-undo">
                     <i class="fa fa-undo" aria-hidden="true"></i>
                 </div>
-                <div class="menu-btn d-flex align-items-center justify-content-center">
+                <div class="menu-btn d-flex align-items-center justify-content-center" id="game-end">
                     <i class="fa fa-times" aria-hidden="true"></i>
                 </div>
             </nav>
