Showing the active player now, switching actively

--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
                 </div-->
             </div>
         </footer>
+        <div class="menu-player">
+            <div class="player-btn active d-flex align-items-center justify-content-center" id="times">
+                <i class="fa fa-times"></i>
+            </div>
+            <div class="player-btn d-flex align-items-center justify-content-center" id="circle">
+                <i class="fa fa-circle-o"></i>
+            </div>
+        </div>
         <div class="menu-overlay">
             <nav>
                 <button class="menu-btn d-flex align-items-center justify-content-center" id="game-restart">
