Basic functionality is finished. Code quality has yet to be improved. Minor fixed are needed

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
             </div>
         </footer>
         <div class="menu-player">
-            <div class="player-btn active d-flex align-items-center justify-content-center" id="times">
+            <div class="player-btn d-flex align-items-center justify-content-center" id="times" onclick="start(this)">
                 <i class="fa fa-times"></i>
             </div>
-            <div class="player-btn d-flex align-items-center justify-content-center" id="circle">
+            <div class="player-btn d-flex align-items-center justify-content-center" id="circle" onclick="start(this)">
                 <i class="fa fa-circle-o"></i>
             </div>
         </div>
