added homework section after conducting workshop successfully

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <section class="row">
                 <div class="col-12 d-flex align-items-center justify-content-center">
                     <div class="board" id="board">
-                        
+                        <!-- Tic Tac Toe Container -->
                     </div>
                 </div>
             </section>
