added homework section after conducting workshop successfully

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <button class="menu-btn d-flex align-items-center justify-content-center" id="game-restart">
                     <i class="fa fa-refresh" aria-hidden="true"></i>
                 </button>
-                <button class="menu-btn d-flex align-items-center justify-content-center" id="game-undo">
+                <button class="menu-btn d-flex align-items-center justify-content-center" id="game-undo" onclick="undo()">
                     <i class="fa fa-undo" aria-hidden="true"></i>
                 </button>
                 <button class="menu-btn d-flex align-items-center justify-content-center" id="game-heuristic">
